# pesh

./: .gitignore  Cargo.toml  README.md  your_program.sh
.codecrafters/: run.sh
src/: cli.rs  error.rs  lib.rs  main.rs  out_stream.rs
src/cli/: completion.rs  mod.rs
src/cli/theme/: mod.rs  posix.rs
src/eval/: command.rs  instruction.rs  mod.rs  parser.rs
src/eval/command/: builtins.rs  composite.rs  mod.rs
test/execute_examples/: pargs
