[package]
name = "pesh"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "a fancy learning shell"
readme = "README.md"
homepage = "https://github.com/PlexSheep/pesh"
repository = "https://github.com/PlexSheep/pesh"
keywords = ["template"]
rust-version = "1.91"


[dependencies]
anyhow = "1.0.102"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
shlex = "1.3.0"
thiserror = "1.0.38"                             # error handling
