[package]
name = "pesh"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "a fancy learning shell"
readme = "README.md"
homepage = "https://github.com/PlexSheep/pesh"
repository = "https://github.com/PlexSheep/pesh"
keywords = ["template"]
rust-version = "1.91"


[dependencies]
bytes = "1.3.0"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
dialoguer = {version="0.12.0", features = [ "zeroize", "completion", "fuzzy-matcher", "fuzzy-select", "history" ]}
indicatif = "0.18.4"
nix = { version = "0.31.2", features = ["fs"] }
shlex = "1.3.0"
strum = "0.28"
strum_macros = "0.28"
thiserror = "1.0.38"
